Fix scrollbar on expand/collapse right column

--- a/graphite/theme/resources/css/graphite.theme.main.css
+++ b/graphite/theme/resources/css/graphite.theme.main.css
@@ -383,6 +383,7 @@ div.constraint {
     margin-right: -350px;
     margin-top:-10px;
     padding-left: 32px;
+    height:200px;
 }
 #portal-column-two {
     background-color: #efefef;
